cleaned up tuts

--- a/workshops/week-05-2023.md
+++ b/workshops/week-05-2023.md
@@ -1,9 +1,9 @@
-**Tutorial Week 5, Semester 2 2022: Interviews**
+---
+title: Interviews
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor (with contributions from Penny
-Kyburz)
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The purpose of this tutorial is to give you hands-on experience with
 designing and conducting semi-structured interviews. This is one of the
@@ -12,21 +12,12 @@ most common data collection methods in HCI research.
 The intended learning outcomes of this tutorial are to:
 
 - Define and identify the features of a semi-structured user interview
-
 - Design an interview guide with well-defined themes and questions
-
 - Evaluate interview questions through practice with other participants
-
 - Reflect on the interview interactions and questions to refine your
   interview approach
 
-Your Prototype Design and Presentation Project Group registration is due
-this week by Friday 26 August 6pm. **Please read the Course Syllabus for
-further information on project group formation.** Your Tutor will help
-you to form project groups in the tutorial this week. It is important
-that you attend your tutorial to form a project group.
-
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -47,98 +38,83 @@ tutorial:
     Research. In Proceedings of the 2021 CHI Conference on Human Factors
     in Computing Systems (CHI \'21). Association for Computing
     Machinery, New York, NY, USA, Article 159, 1--16.
-    https://doi-org.virtual.anu.edu.au/10.1145/3411764.3445737*
+    <https://doi-org.virtual.anu.edu.au/10.1145/3411764.3445737>*
 
-**Structure**
+## Structure
 
 The tutorial will follow this structure:
 
 1.  Project group formation (10 mins)
-
 2.  Designing an interview guide individually (10 mins)
-
 3.  Conducting an interview in pairs (20 mins)
-
 4.  Reporting back and reflecting, and close (10 mins)
 
-**Activities**
+## Activities
 
-1.  Project group formation (10 mins)
+### Project group formation (10 mins)
 
-    a.  Your Tutor will advise you how many project groups need to be
-        formed within your tutorial session (based on student enrolment
-        numbers)
 
-    b.  Form a project group with the right number of students as
-        advised by your Tutor
+a.  Your Tutor will advise you how many project groups need to be
+    formed within your tutorial session (based on student enrolment
+    numbers)
 
-        i.  If you are having difficulties in finding a project group to
-            join, please speak to your Tutor.
+b.  Form a project group with the right number of students as
+    advised by your Tutor
 
-    c.  Please register your group on Wattle using the project
-        registration sign up link for your tutorial session
+    i.  If you are having difficulties in finding a project group to
+        join, please speak to your Tutor.
 
-2.  Designing an interview guide individually (10 mins)
+c.  Please register your group on Wattle using the project
+    registration sign up link for your tutorial session
 
-    a.  Your Tutor will ask the following discussion question: How would
-        you define a "semi-structured interview" in your own words? Why
-        are semi-structured interviews a useful method in HCI research?
+### Designing an interview guide individually (10 mins)
 
-    b.  You will undertake the following task individually: Design a
-        semi-structured interview guide on the topic of "university
-        students' experiences of online shopping":
+a.  Your Tutor will ask the following discussion question: How would
+    you define a "semi-structured interview" in your own words? Why
+    are semi-structured interviews a useful method in HCI research?
 
-        i.  Give your interview guide a name
+b.  You will undertake the following task individually: Design a
+    semi-structured interview guide on the topic of "university
+    students' experiences of online shopping":
 
-        ii. Write an 'icebreaker question' as a conversation starter to
-            build rapport
+    i.  Give your interview guide a name
 
-        iii. Write 5 interview questions about this topic
+    ii. Write an 'icebreaker question' as a conversation starter to
+        build rapport
 
-        iv. Include a prompt to thank your participants at the end of
-            your interview guide
+    iii. Write 5 interview questions about this topic
 
-3.  Conducting your interview in pairs (20 mins)
+    iv. Include a prompt to thank your participants at the end of
+        your interview guide
 
-    a.  Choose another person from the tutorial to work with
+### Conducting your interview in pairs (20 mins)
 
-    b.  Practice asking the person the questions from your interview
+a.  Choose another person from the tutorial to work with
+
+b.  Practice asking the person the questions from your interview
+    guide
+
+    i.  Try and ask at least one follow-up questions that relates to
+        their responses, but was not in your original interview
         guide
 
-        i.  Try and ask at least one follow-up questions that relates to
-            their responses, but was not in your original interview
-            guide
+c.  Do not record or write down their responses, but note down any
+    feedback and suggestions that you have for your interviewer
+    about their technique
 
-    c.  Do not record or write down their responses, but note down any
-        feedback and suggestions that you have for your interviewer
-        about their technique
+d.  Give the other person feedback on their interview questions and
+    technique
 
-    d.  Give the other person feedback on their interview questions and
-        technique
+e.  Make sure to swap over the interviewer and interviewee after 10
+    minutes
 
-    e.  Make sure to swap over the interviewer and interviewee after 10
-        minutes
+### Reporting back and reflecting, and close (10 mins)
 
-4.  Reporting back and reflecting, and close (10 mins)
+The Tutor will bring you back together for a whole group
+discussion to reflect on what you learnt and observed. Think
+about the following questions:
 
-    a.  The Tutor will bring you back together for a whole group
-        discussion to reflect on what you learnt and observed. Think
-        about the following questions:
-
-        i.  Why are semi-structured interviews a useful method in HCI
-            research?
-
-        ii. What was your experience of designing your interview guide?
-            How did you think of ideas for interview questions? Can you
-            share some of your questions with the rest of the class?
-
-        iii. What did you learn about conducting interviews when working
-             in your pairs? What kinds of feedback did you receive from
-             your interview partner?
-
-        iv. How might you refine and improve your interview questions
-            based on your experiences and the feedback that you
-            received?
-
-5.  The Tutor will bring the tutorial to a close and answer any
-    questions if time
+1. Why are semi-structured interviews a useful method in HCI research?
+2. What was your experience of designing your interview guide? How did you think of ideas for interview questions? Can you share some of your questions with the rest of the class?
+3. What did you learn about conducting interviews when working in your pairs? What kinds of feedback did you receive from your interview partner?
+4. How might you refine and improve your interview questions based on your experiences and the feedback that you received?
