--- a/workshops/week-06-2023.md
+++ b/workshops/week-06-2023.md
@@ -1,15 +1,15 @@
-**Tutorial Week 6, Semester 2 2022: Revising your Cultural Probe and
-Progressing with the Project Work**
+---
+title: Revising your Cultural Probe
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The purpose of this tutorial is to help you make progress with your
 Project 2 work, and provide feedback to ensure that you are on the right
 track.
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -29,36 +29,34 @@ tutorial:
 4.  Review the recent Wattle Announcements information posts relating to
     the Project Work
 
-**Structure**
+## Structure
 
 The tutorial will follow this structure:
 
 1.  Project 1 Self-Reflection Activity (15 minutes) -- individual
-
 2.  Make progress with your Project 2 Submission (30 minutes) --
     individual
-
 3.  Your Tutor will answer any general questions if there is time
     remaining (5 minutes)
 
-**Activities**
+## Activities
 
-1.  Project 1 Self-Reflection Activity (15 minutes) -- individual
+### Self-Reflection Activity (15 minutes) -- individual
 
-    - Please answer the following self-reflection questions and upload
-      your responses to the Wattle Form link with the Week 6 content.
-      This task is not assessed.
+Please answer the following self-reflection questions and upload
+your responses to the Wattle Form link with the Week 6 content.
+This task is not assessed.
 
-    - The Teaching Team will review the responses in order to support
-      you, and help you stay on the right track for your **Project 2
-      Assessment.** Your responses will not be shared with other
-      students.
+The Teaching Team will review the responses in order to support
+you, and help you stay on the right track for your **Project 2
+Assessment.** Your responses will not be shared with other
+students.
 
-    - If you are unsure about how to answer these questions, make sure
-      that you speak to the Teaching Team during your tutorial time and
-      ask for help.
+If you are unsure about how to answer these questions, make sure
+that you speak to the Teaching Team during your tutorial time and
+ask for help.
 
-**Self-Reflection Questions**
+Self-Reflection Questions:
 
 - **Making Activity:**
 
@@ -112,15 +110,11 @@ The tutorial will follow this structure:
   - I have the following questions for the teaching team about the
     Project Assessment
 
-2.  Make progress with your Project 2 Submission (30 minutes) --
-    individual
+### Make progress with your Project 2 Submission (30 minutes) -- individual
 
-    - Work individually towards completing tasks relating to your
-      Project 2 submission. Do not collaborate with other students on
-      this task.
+- Work individually towards completing tasks relating to your
+  Project 2 submission. Do not collaborate with other students on
+  this task.
 
-    - Please ask the teaching team if you have any questions about the
-      Project 2 activities during the tutorial.
-
-3.  Your Tutor will answer any general questions if there is time
-    remaining (5 minutes).
+- Please ask the teaching team if you have any questions about the
+  Project 2 activities during the tutorial.
