--- a/workshops/week-07-2023.md
+++ b/workshops/week-07-2023.md
@@ -1,6 +1,6 @@
-**Tutorial Week 7-8, Semester 2 2022: Group Work Planning Document**
-
-Prepared by Anne Ozdowska and Jennyfer Lawrence Taylor
+---
+title: Group Work Planning Document
+---
 
 This document is designed to help you to plan and collaborate within
 your team for your Prototype Design and Presentation Assessment. It is
