--- a/workshops/week-08-2023.md
+++ b/workshops/week-08-2023.md
@@ -1,8 +1,9 @@
-**Tutorial Week 8, Semester 2 2022: Prototyping**
+---
+title: Prototyping
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor and Penny Kyburz
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The purpose of this tutorial is to give you hands-on experience in
 low-fidelity prototyping, which is a key task in the Prototype Design
@@ -17,91 +18,78 @@ The intended learning outcomes of this tutorial are to:
 
 - Critically analyse design decisions.
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
 
-1.  Read the revised version of the **Course Syllabus** (version 1.3 --
-    Released 28 August 2022), noting changes in yellow.
-
-2.  Review the lecture content for Week 6 on **Ideation** and Week 7 on
+1.  Review the lecture content for Week 6 on **Ideation** and Week 7 on
     **Prototyping.\**
 
-3.  Read **Chapter 12 Design, Prototyping, and Construction** in Sharp
+2.  Read **Chapter 12 Design, Prototyping, and Construction** in Sharp
     et al. 2019 *Interaction Design: Beyond Human-Computer Interaction*
     (Sharp, Preece & Rogers 2019) -- Available as an e-book through ANU
     Library website.**\**
 
-4.  Make sure that your group has completed you ideation activities for
+3.  Make sure that your group has completed you ideation activities for
     6.2.3 Ideation and Low-Fidelity Prototype (for Peer Feedback) (0% -
     ungraded) (p.35) for both methods (10 ideas total). Bring your list
     of ideas to the tutorial.
 
-**Structure**
+## Structure
 
 The tutorial will follow this structure:
 
 1.  Develop a set of scenarios (15 mins)
-
 2.  Sketch out storyboards based on scenarios (15 mins)
-
 3.  Present and discuss storyboards in groups (15 mins)
-
 4.  Report back and close (5 mins)
 
-**Activities**
+## Activities
 
-1.  Develop a set of scenarios (15 mins)
+### Develop a set of scenarios (15 mins)
 
-    a.  Your Tutor will place you in a breakout room with your Project
-        Team members.
+1.  Your Tutor will place you in a breakout room with your Project
+    Team members.
 
-    b.  Choose your three best design ideas.
+2.  Choose your three best design ideas.
 
-    c.  Generate a selection of scenarios in your group that involve the
-        use of each of those three technology designs. Ensure you
-        generate at least as many scenarios as group members for each
-        design idea.
+3.  Generate a selection of scenarios in your group that involve the
+    use of each of those three technology designs. Ensure you
+    generate at least as many scenarios as group members for each
+    design idea.
 
-    d.  Assign one scenario to each group member to work on.
+4.  Assign one scenario to each group member to work on.
 
-<!-- -->
+### Sketch out storyboards based on scenarios (15 mins)
 
-1.  Sketch out storyboards based on scenarios (15 mins)
+Stay in the breakout rooms but work individually to develop each
+scenario into a storyboard. Think through the steps that might
+be involved in the scenario and the personas involved, and draw
+up rough sketches to illustrate each step.
 
-    a.  Stay in the breakout rooms but work individually to develop each
-        scenario into a storyboard. Think through the steps that might
-        be involved in the scenario and the personas involved, and draw
-        up rough sketches to illustrate each step.
+### Present and discuss storyboards in groups (15 mins)
 
-2.  Present and discuss storyboards in groups (15 mins)
+In your project groups, present your storyboard to each other
+and discuss as a group:
 
-    a.  In your project groups, present your storyboard to each other
-        and discuss as a group:
+1. What is the goal of the storyboard?
+2. What did you learn from developing the storyboard?
+3. What design decisions did you make when developing this storyboard?
 
-        i.  What is the goal of the storyboard?
+Decide whether the storyboard represents your 'best idea' that
+your group will carry forward for your low-fidelity prototype
+design.
 
-        ii. What did you learn from developing the storyboard?
+1.  If so, what further work needs to be done to it to ensure
+    that it is ready to present for peer feedback in the Week 9
+    tutorial as your low-fidelity prototype?
 
-        iii. What design decisions did you make when developing this
-             storyboard?
+2.  If not, what alternative design direction will you take, and
+    how will you present this as a low-fidelity prototype for
+    the Week 9 peer feedback session?
 
-    b.  Decide whether the storyboard represents your 'best idea' that
-        your group will carry forward for your low-fidelity prototype
-        design.
+### Report back and close (5 mins)
 
-        i.  If so, what further work needs to be done to it to ensure
-            that it is ready to present for peer feedback in the Week 9
-            tutorial as your low-fidelity prototype?
-
-        ii. If not, what alternative design direction will you take, and
-            how will you present this as a low-fidelity prototype for
-            the Week 9 peer feedback session?
-
-3.  Report back and close (5 mins)
-
-    a.  Your Tutor will bring everyone back together
-
-    b.  The Tutor will bring the tutorial to a close and answer any
-        questions if time.
+Your Tutor will bring everyone back together.
+The Tutor will bring the tutorial to a close and answer any questions if time.
