--- a/workshops/week-10-2023.md
+++ b/workshops/week-10-2023.md
@@ -1,17 +1,15 @@
-**Tutorial Week 10, Semester 2 2022: Design Sustainability**
+---
+title: Design Sustainability
+author: Dr Jennyfer Lawrence Taylor
+---
 
-
-
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The purpose of this tutorial is to help you think through the
 environmental dimensions of technology design and use, and how to
-prototype new technology designs in sustainable ways. This content is
-new to COMP3900/COMP6390 this year -- your feedback on the content and
-activities is appreciated.
+prototype new technology designs in sustainable ways.
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -22,130 +20,118 @@ tutorial:
 - Develop a plan for how you are going to construct your high-fidelity
   prototype.
 
-**Structure**
+## Structure
 
 The tutorial will follow this structure:
 
 1.  Introduction and announcements (5 mins)
-
 2.  Materials and tools analysis of your design process (25 mins)
-
 3.  Reporting back and discussion (10 mins)
 
-**Activities**
+## Activities
 
-1.  Introduction and announcements (5 mins)
+Your tutor will put you into groups to complete the following activities.
 
-    a.  Your Tutor will open the session and let you know of any
-        reminders and announcements
+### Materials and tools analysis of your design process (25 mins)
 
-    b.  Your Tutor will put you into a breakout room with your project
-        team members.
+Create a shared document for your group with the following table:
 
-2.  Materials and tools analysis of your design process (25 mins)
+--------------------------------------------------------------------------
+**Number**   **Material/Tool**   **Artefact          **Environmental
+                                  produced**          impacts of the
+                                                      material/tool**
+------------ ------------------- ------------------- ---------------------
+*1*          *e.g., Draw.io*     *Brainstorming      *C02 emissions, water
+                                  diagram*            use, energy use from
+                                                      cloud computing
+                                                      infrastructure (try
+                                                      to include more
+                                                      specifics and detail
+                                                      than this)*
 
-    a.  Create a shared document for your Team with the following table:
+2                                                    
+--------------------------------------------------------------------------
 
-  --------------------------------------------------------------------------
-  **Number**   **Material/Tool**   **Artefact          **Environmental
-                                   produced**          impacts of the
-                                                       material/tool**
-  ------------ ------------------- ------------------- ---------------------
-  *1*          *e.g., Draw.io*     *Brainstorming      *C02 emissions, water
-                                   diagram*            use, energy use from
-                                                       cloud computing
-                                                       infrastructure (try
-                                                       to include more
-                                                       specifics and detail
-                                                       than this)*
+### Discuss the following points below and populate the table cells with your responses:
 
-  2                                                    
-  --------------------------------------------------------------------------
+- **Materials/tools:** List all of the materials and tools that you
+  have used in your Prototype Design and Presentation Assessment so
+  far (hardware, software, devices, digital files, note paper,
+  stationery, crafting materials).
 
-b.  Discuss the following points below and populate the table cells with
-    your responses:
+- **Artefact produced:** Identify the artefact(s) that you produced
+  using these tools (e.g., planning documents, ideation materials,
+  prototypes etc.)
 
-    - **Materials/tools:** List all of the materials and tools that you
-      have used in your Prototype Design and Presentation Assessment so
-      far (hardware, software, devices, digital files, note paper,
-      stationery, crafting materials).
-
-    - **Artefact produced:** Identify the artefact(s) that you produced
-      using these tools (e.g., planning documents, ideation materials,
-      prototypes etc.)
-
-    - **Environmental impact:** Think about the environmental impact of
-      the materials and tools that you have used (including the
-      infrastructure needed to produce the materials or offer the
-      services). What alternative materials/tools could you use that
-      would reduce the environmental impact of your design work
-      (thinking about energy, waste etc.)?
+- **Environmental impact:** Think about the environmental impact of
+  the materials and tools that you have used (including the
+  infrastructure needed to produce the materials or offer the
+  services). What alternative materials/tools could you use that
+  would reduce the environmental impact of your design work
+  (thinking about energy, waste etc.)?
 
 > You may need to do some internet research as part of this activity.
 > Try to include specifics and examples as much as possible e.g., amount
 > of emissions, resources used etc.
 
-c.  Add the following additional columns to your table:
+### Add the following additional columns to your table:
 
-  --------------------------------------------------------------------------
-  **Lifespan**   **Value**             **Reuse/repurpose   **Possible
-                                       of artefacts**      alternative
-                                                           materials**
-  -------------- --------------------- ------------------- -----------------
-  1 year         Can be used in my     Revising the work   A different
-                 portfolio to          as a digital        prototyping tool
-                 demonstrate my skills portfolio entry     e.g., Figma
-                 in conducting                             
-                 brainstorming                             
-                 sessions and in                           
-                 producing high                            
-                 quality                                   
-                 visualisations.                           
+--------------------------------------------------------------------------
+**Lifespan**   **Value**             **Reuse/repurpose   **Possible
+                                      of artefacts**      alternative
+                                                          materials**
+-------------- --------------------- ------------------- -----------------
+1 year         Can be used in my     Revising the work   A different
+                portfolio to          as a digital        prototyping tool
+                demonstrate my skills portfolio entry     e.g., Figma
+                in conducting                             
+                brainstorming                             
+                sessions and in                           
+                producing high                            
+                quality                                   
+                visualisations.                           
 
-  --------------------------------------------------------------------------
+--------------------------------------------------------------------------
 
-d.  Discuss the following points below and populate the table cells with
-    your responses:
+### Discuss the following points below and populate the table cells with your responses
 
-    - **Lifespan:** Think about think the intended lifespan of each
-      artefact until it stops becoming useful (e.g., three weeks, six
-      months, five years). How will you use, store, or dispose of this
-      artefact after its intended lifespan?
+- **Lifespan:** Think about think the intended lifespan of each
+  artefact until it stops becoming useful (e.g., three weeks, six
+  months, five years). How will you use, store, or dispose of this
+  artefact after its intended lifespan?
 
-    - **Value:** For each of physical and digital artefact you have
-      identified, what kinds of value do these artefacts hold, if any
-      (apart from providing you with a grade in the course)? Will the
-      artefacts or knowledge encoded in them have value for your studies
-      and career beyond the course? Will any of these artefacts have
-      sentimental or emotional value?
+- **Value:** For each of physical and digital artefact you have
+  identified, what kinds of value do these artefacts hold, if any
+  (apart from providing you with a grade in the course)? Will the
+  artefacts or knowledge encoded in them have value for your studies
+  and career beyond the course? Will any of these artefacts have
+  sentimental or emotional value?
 
-    - **Reuse/repurposing:** Can any of the artefacts you have produced
-      or their materials be reused or repurposed for something else
-      after the course?
+- **Reuse/repurposing:** Can any of the artefacts you have produced
+  or their materials be reused or repurposed for something else
+  after the course?
 
-    - **Possible tools/alternative materials:**
+- **Possible tools/alternative materials:**
 
-      - Identify 5 items of household waste that each person in the
-        group commonly throws away (e.g., tin foil, yoghurt containers,
-        cardboard cereal boxes, brown butchers/deli paper, egg cartons,
-        toilet roll tubes).
+  - Identify 5 items of household waste that each person in the
+    group commonly throws away (e.g., tin foil, yoghurt containers,
+    cardboard cereal boxes, brown butchers/deli paper, egg cartons,
+    toilet roll tubes).
 
-      - Think about the material properties of these waste items as
-        possible resources for prototyping (what they are made from, the
-        look and feel, mechanical properties, how to dispose of the
-        material, safe handling of the material):
-        <https://www.bbc.co.uk/bitesize/guides/zk9g4qt/revision/1>
+  - Think about the material properties of these waste items as
+    possible resources for prototyping (what they are made from, the
+    look and feel, mechanical properties, how to dispose of the
+    material, safe handling of the material):
+    <https://www.bbc.co.uk/bitesize/guides/zk9g4qt/revision/1>
 
-      - Discuss whether any of the items you have identified could serve
-        as alternatives to the materials and tools you have identified
-        above.
+  - Discuss whether any of the items you have identified could serve
+    as alternatives to the materials and tools you have identified
+    above.
 
-<!-- -->
+## Reporting back and discussion (10 mins)
 
-3.  Reporting back and discussion (10 mins)
+Your Tutor(s) will bring you back together for a whole group
+discussion to reflect on what you learnt and observed.
 
-    a.  Your Tutor(s) will bring you back together for a whole group
-        discussion to reflect on what you learnt and observed.
-
-    b.  Your Tutor(s) will bring the workshop to a close and answer any
-        questions if there is time.
+Your Tutor(s) will bring the workshop to a close and answer any
+questions if there is time.
