--- a/workshops/week-11-2023.md
+++ b/workshops/week-11-2023.md
@@ -1,8 +1,9 @@
-**Tutorial Week 11, Semester 2 2022: Evaluation**
+---
+title: Evaluation
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The purpose of this tutorial is to help you to design and conduct an
 evaluation activity.
@@ -10,15 +11,12 @@ evaluation activity.
 The intended learning outcomes for this tutorial are to:
 
 - Develop design evaluation goals
-
 - Design evaluation activities using qualitative methods
-
 - Facilitate an evaluation activity with technology users
-
 - Critically reflect on which evaluation methods can address particular
   kinds of evaluation goals and research questions
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -57,88 +55,84 @@ tutorial:
 
     - **Jobs portal:** <https://www.anu.edu.au/jobs>
 
-**Structure**
+## Structure
 
 1.  Plan your evaluation activity - individually (10 mins)
-
 2.  Conduct your evaluation activity in pairs (30 mins)
-
 3.  Report back and close (10 mins)
 
-**Activities**
+## Activities
 
-1.  Plan your evaluation activity - individually (10 mins)
+### Plan your evaluation activity - individually (10 mins)
 
-    - Choose a particular feature of the ANU website that you wish to
-      evaluate, that can facilitate a task for the user to complete
-      (e.g., finding ANU accommodation choices that satisfy X criteria).
+- Choose a particular feature of the ANU website that you wish to
+  evaluate, that can facilitate a task for the user to complete
+  (e.g., finding ANU accommodation choices that satisfy X criteria).
 
-      - You can choose one of the areas listed above, or another area of
-        this website not on the list. Choose an area of the ANU website
-        that **does not** require logging in (i.e., a publicly
-        accessible part of the website).
+  - You can choose one of the areas listed above, or another area of
+    this website not on the list. Choose an area of the ANU website
+    that **does not** require logging in (i.e., a publicly
+    accessible part of the website).
 
-    - Choose one user experience AND one usability evaluation goal to
-      focus on.
+- Choose one user experience AND one usability evaluation goal to
+  focus on.
 
-    - Choose a task for the user to complete that would address your
-      evaluation goals.
+- Choose a task for the user to complete that would address your
+  evaluation goals.
 
-    - Plan a 10-minute think aloud evaluation activity, where you ask
-      the user to complete the task and think aloud as they are doing
-      it.
+- Plan a 10-minute think aloud evaluation activity, where you ask
+  the user to complete the task and think aloud as they are doing
+  it.
 
-      - Write down your instructions to participants as a script.
+  - Write down your instructions to participants as a script.
 
-      - Ensure that you ask participants consent to take part in the
-        evaluation task, and thank them for their time at the end.
+  - Ensure that you ask participants consent to take part in the
+    evaluation task, and thank them for their time at the end.
 
-      - You cannot record the 'participant'. You can only take
-        handwritten notes that do not include any identifying
-        information in them for the purpose of the tutorial discussion.
+  - You cannot record the 'participant'. You can only take
+    handwritten notes that do not include any identifying
+    information in them for the purpose of the tutorial discussion.
 
-2.  Conduct your evaluation activity in pairs (30 mins)
+### Conduct your evaluation activity in pairs (30 mins)
 
-    - Your Tutor will automatically assign you to a break-out room with
-      one other person at random.
+- Your Tutor will automatically assign you to a break-out room with
+  one other person at random.
 
-      - It does not matter if they are not in the same project group as
-        you, as this task does not relate to the Prototype Design and
-        Presentation Assessment.
+  - It does not matter if they are not in the same project group as
+    you, as this task does not relate to the Prototype Design and
+    Presentation Assessment.
 
-      - If there is an uneven number of participants, the Tutor will
-        create a group of three.
+  - If there is an uneven number of participants, the Tutor will
+    create a group of three.
 
-    - Take turns to conduct and participate in your evaluation activity
-      in pairs.
+- Take turns to conduct and participate in your evaluation activity
+  in pairs.
 
-      - If you are in the group of three, you can stay in your breakout
-        room for the full 30 minutes rather than returning to the main
-        room if you need more time.
+  - If you are in the group of three, you can stay in your breakout
+    room for the full 30 minutes rather than returning to the main
+    room if you need more time.
 
-    - Discuss what the outcomes of your evaluation activities were, and
-      whether they met your evaluation goals. Identify strengths and
-      limitations to your evaluation approaches.
+- Discuss what the outcomes of your evaluation activities were, and
+  whether they met your evaluation goals. Identify strengths and
+  limitations to your evaluation approaches.
 
-3.  Report back and close (10 mins)
+### Report back and close (10 mins)
 
-    - The Tutor will bring everyone back together to the main Zoom room
-      for a discussion, addressing the following questions:
+- The Tutor will bring everyone back together to the main Zoom room
+  for a discussion, addressing the following questions:
 
-      - What were your evaluation goals? What were the findings from
-        your evaluation activity?
+  - What were your evaluation goals? What were the findings from
+    your evaluation activity?
 
-      - What did you learn about facilitating evaluation activities? How
-        will you improve your skills as a facilitator based on your
-        experiences in this tutorial?
+  - What did you learn about facilitating evaluation activities? How
+    will you improve your skills as a facilitator based on your
+    experiences in this tutorial?
 
-      - What were the limitations or constraints to your approach?
+  - What were the limitations or constraints to your approach?
 
-      - Would this be a useful evaluation approach to take if you were
-        to run an evaluation study of your high-fidelity prototype?
-        Why/why not?
+  - Would this be a useful evaluation approach to take if you were
+    to run an evaluation study of your high-fidelity prototype?
+    Why/why not?
 
-    <!-- -->
-
-    - The Tutor will answer questions if there is time and close the
-      tutorial session.
+- The Tutor will answer questions if there is time and close the
+  tutorial session.
