--- a/workshops/week-12-2023.md
+++ b/workshops/week-12-2023.md
@@ -1,15 +1,15 @@
-**Tutorial Week 12, Semester 2 2022: Oral Presentations and Prototype
-Demonstrations**
+---
+title: Oral Presentations and Prototype Demonstrations
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The purpose of this tutorial is for your group to deliver your **Oral
 Presentation with Prototype Demonstration** for the Prototype Design and
 Presentation Assessment.
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -22,7 +22,7 @@ tutorial:
 3.  Review the Wattle Announcement **Week 12 Oral Presentation:
     Important Information** (posted 17 October 2022).
 
-**Activities**
+## Activities
 
 Oral presentations with prototype demonstration from each group.
 
@@ -52,8 +52,6 @@ Oral presentations with prototype demonstration from each group.
     If you have not reached the end of your talk within the allotted
     time, you will need to stop presenting at whichever point you have
     reached in your presentation.
-
-<!-- -->
 
 - If it is not your group's turn to present, please be a respectful and
   engaged audience for your peers. There may be time for you to ask a
