--- a/references.bib
+++ b/references.bib
@@ -26,3 +26,10 @@ address = {Hoboken, NJ, USA},
 url = {https://quicklink.anu.edu.au/kv9b}
 }
 
+@misc{gibbons-journey-mapping-101,
+  year = {2018},
+  author = {Sarah Gibbons},
+  title = {Journey Mapping 101},
+  url = {https://www.nngroup.com/articles/journey-mapping-101/},
+  note = {[Blog post on NN/g Nielsen Norman Group website]}
+}
