hacked out lecture 6

--- a/references.bib
+++ b/references.bib
@@ -33,3 +33,24 @@ url = {https://quicklink.anu.edu.au/kv9b}
   url = {https://www.nngroup.com/articles/journey-mapping-101/},
   note = {[Blog post on NN/g Nielsen Norman Group website]}
 }
+
+@book{shneiderman-hci:2018,
+author = {Ben Shneiderman and Catherine Plaisant and Maxine Cohen and Steven Jacobs and Niklas Elmqvist and Nicholas Diakopoulos},
+title = {Designing the User Interface: Strategies for Effective Human-Computer Interaction, 6th Edition},
+year = {2018},
+isbn = {978-1-292-15391-9},
+publisher = {Pearson},
+address = {Harlow, Essex, UK},
+url = {https://quicklink.anu.edu.au/kv9b}
+}
+
+@article{milgram-mr:1994,
+  title={A Taxonomy Of Mixed Reality Visual Displays},
+  author={Milgram, Paul and Kishino, Fumio},
+  journal={IEICE TRANSACTIONS on Information},
+  volume={E77-D},
+  number={12},
+  pages={1321--1329},
+  year={1994},
+  publisher={The Institute of Electronics, Information and Communication Engineers},
+}
