add nice image and citation

--- a/references.bib
+++ b/references.bib
@@ -54,3 +54,13 @@ url = {https://quicklink.anu.edu.au/kv9b}
   year={1994},
   publisher={The Institute of Electronics, Information and Communication Engineers},
 }
+
+@proceedings{aci-conference:2024,
+title = {ACI '24: Proceedings of the International Conference on Animal-Computer Interaction},
+year = {2024},
+isbn = {9798400711756},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://dl.acm.org/doi/proceedings/10.1145/3702336},
+doi = {10.1145/3702336}
+}
